# mikuchat-sdk

./: README.md  pyproject.toml
src/mikuchat/: README.md  config.py  exceptions.py  log.py  models.py
src/mikuchat/apis/: __init__.py  _api.py  assistant.py  assistant.pyi  baidu.py  baidu.pyi  bangumi.py  bangumi.pyi  cave.py  cave.pyi  email.py  email.pyi  invitation.py  invitation.pyi  minecraft.py  minecraft.pyi  prize.py  prize.pyi  statistics.py  statistics.pyi  user.py  user.pyi
src/mikuchat/test/: test.py
tests/: config_test.py
